管理用户上传图片和改名,主页登陆信息显示及地域显示,用户认证,添加房源,显示房源,主页显示热门房源

--- a/flask_ihome/ihome/static/html/register.html
+++ b/flask_ihome/ihome/static/html/register.html
@@ -33,7 +33,7 @@
             <div class="form-group form-group-lg">
                 <div class="input-group">
                     <div class="input-group-addon"><i class="fa fa-envelope-o fa-lg fa-fw"></i></div>
-                    <input type="text" class="form-control" name="phonecode" id="phonecode" placeholder="短信验证码" required>
+                    <input type="text" class="form-control" name="phoneCode" id="phonecode" placeholder="短信验证码" required>
                     <div class="phonecode input-group-addon">
                         <a class="phonecode-a" href="javascript:;" onclick="sendSMSCode();">获取验证码</a>
                     </div>
