订单模块:创建订单,查看订单,接单拒单,添加评论

--- a/flask_ihome/ihome/static/html/lorders.html
+++ b/flask_ihome/ihome/static/html/lorders.html
@@ -21,6 +21,17 @@
             </div>
         </div>
         <div class="orders-con">
+            <ul class="houses-list auth-warn" style="display: none;">
+                <li>
+                    <br>
+                    <div class="house-title">
+                        <h3 style="font-size: 16px;">尚未进行实名认证，无法展示发布房屋信息！</h3>
+                    </div><br>
+                    <div class="house-content">
+                        <a href="/auth.html" class="btn btn-success">去实名认证</a>
+                    </div>
+                </li>
+            </ul>
             <ul class="orders-list">
             </ul>
             <script id="orders-list-tmpl" type="text/html">
